# phishtank-tool

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  test_main.http  verified_online.csv
phishtank/: app.py  config.py  core.py  data_loader.py  db.py  model.py  routes.py
